--- a/content/enterprise/requirements/credentials.mdx
+++ b/content/enterprise/requirements/credentials.mdx
@@ -18,7 +18,7 @@ Terraform Enterprise requires a TLS certificate and private key in order to oper
 
 The certificate can be signed by a public or private CA, but it _must_ be trusted by all of the services that Terraform Enterprise is expected to interface with; this includes your VCS provider, any CI systems or other tools that call Terraform Enterprise's API, and any services that Terraform Enterprise workspaces might send notifications to (for example: Slack). Due to these wide-ranging interactions, we recommend using a certificate signed by a public CA.
 
-The key and X.509 certificate should both be PEM (base64) encoded, and should be provided to the installer as text.
+The key and X.509 certificate must be PEM (base64) encoded, and should be provided to the installer as text.
 
 ~> **Important:** If you use a certificate issued by a private Certificate
 Authority, you must provide the certificate for that CA in the
