Remove mention that TFC organizations have a limit on the number of agent pools

--- a/content/enterprise/admin/agents-on-tfe.mdx
+++ b/content/enterprise/admin/agents-on-tfe.mdx
@@ -26,9 +26,8 @@ and later.
 
 ## Differences Between Agents on TFC and TFE
 
-* **No restriction on Agent or Agent Pool Count**: Terraform Enterprise does not
-  place a limitation on the number of Agent Pools that can be created per organization,
-  or the number of Agents that may register themselves with a given pool.
+* **No restriction on Agent Count**: Terraform Enterprise does not
+  place a limitation on the number of Agents that can be registered per organization.
 
 * **Hostname Registration**: Terraform Cloud Agents registering with a TFE instance
   must define the TFE hostname via the `-address` CLI flag or `TFC_ADDRESS` environment
