--- a/content/enterprise/requirements/hardware.mdx
+++ b/content/enterprise/requirements/hardware.mdx
@@ -6,7 +6,7 @@ description: >-
 
 # Hardware and Data Storage Requirements
 
-It is critical that you set up the correct hardware before installing and running Terraform Enterprise. Incorrect amounts of disk space or memory can cause significant performance issues.
+You must set up the correct hardware before installing and running Terraform Enterprise. Incorrect amounts of disk space or memory can cause significant performance issues.
 
 ## Hardware
 
