--- a/content/enterprise/install/pre-install-checklist.mdx
+++ b/content/enterprise/install/pre-install-checklist.mdx
@@ -43,8 +43,8 @@ You must prepare a running Linux instance for Terraform Enterprise before runnin
 Configure the following for the Linux Instance:
 
 - **Operating System:** Refer to [Supported OS](/enterprise/requirements/os-specific/supported-os) for details.
-- **Hardware:** It is critical that you set up the correct hardware before installing and running Terraform Enterprise. Incorrect amounts of disk space or memory can cause significant performance issues. Refer to [Hardware Requirements](/enterprise/requirements/hardware) for details.
-- **Network:** Terraform Enterprise is a networked application. Its Linux instance(s) needs to allow several kinds of incoming and outgoing network traffic. Refer to [Network Requirements](/enterprise/before-installing/network-requirements) for details.
+- **Hardware:** Incorrect amounts of disk space or memory can cause significant performance issues. Refer to [Hardware Requirements](/enterprise/requirements/hardware) for details.
+- **Network:** Terraform Enterprise is a networked application. Its Linux instance(s) must allow several kinds of incoming and outgoing network traffic. Refer to [Network Requirements](/enterprise/before-installing/network-requirements) for details.
 - **Docker Engine:** Terraform Enterprise requires a Docker engine. Refer to [Docker Requirements](/enterprise/requirements/docker) for configuration details.
 
 
