--- a/content/enterprise/requirements/data-storage/postgres-requirements.mdx
+++ b/content/enterprise/requirements/data-storage/postgres-requirements.mdx
@@ -4,7 +4,7 @@ page_title: PostgreSQL Requirements - Before Installing - Terraform Enterprise
 
 # PostgreSQL Requirements for Terraform Enterprise
 
--> **Note:** These requirements apply to the External Services operational mode, not the Mounted Disk operational mode. See the [Pre-Install Checklist](/enterprise/before-installing) for more information.
+-> **Note:** These requirements apply to the External Services operational mode, not the Mounted Disk operational mode. Refer to the [Pre-Install Checklist](/enterprise/before-installing) for more information.
 
 To use an external PostgreSQL database with Terraform Enterprise, the following
 requirements must be met:
