--- a/content/enterprise/requirements/docker.mdx
+++ b/content/enterprise/requirements/docker.mdx
@@ -50,7 +50,7 @@ If you are installing on RHEL7, you can use Docker Engine 1.13.1 from the Extra 
 
 ## Docker Engine With a Compatible `libseccomp` Version
 
--> **Note:** These instructions should only be used if your operating system does not meet the Docker Engine requirements detailed in [option 1](#option-1-docker-engine-with-a-compatible-runc-version).
+-> **Note:** These instructions should only be used if your operating system does not meet the requirements detailed in [Docker Engine With a Compatible `runc` Version](#docker-engine-with-a-compatible-runc-version).
 
 1. [Install](https://docs.docker.com/engine/install/) Docker Engine 20.10.x for your operating system.
 
@@ -78,7 +78,7 @@ If you are installing on RHEL7, you can use Docker Engine 1.13.1 from the Extra 
 
 ## Docker Engine Using a Modified `libseccomp` Profile
 
--> **Note:** These instructions should only be used if your operating system does not meet the Docker Engine requirements detailed in either [option 1](#option-1-docker-engine-with-a-compatible-runc-version) or [option 2](#option-2-docker-engine-with-a-compatible-libseccomp-version).
+-> **Note:** These instructions should only be used if your operating system does not meet the requirements detailed in either [Docker Engine With a Compatible `runc` Version](#docker-engine-with-a-compatible-runc-version) or [Docker Engine With a Compatible `libseccomp` Version](docker-engine-with-a-compatible-libseccomp-version).
 
 1. [Install](https://docs.docker.com/engine/install/) Docker Engine 1.13.1 (RHEL only), 17.06.2-ce, 18.09.x, 19.03.x, or 20.10.x for your operating system.
 
