Revamp tfe sidebar (#2324)
* Initial round of edits to break up before installing

* move files out of before installing

* remove requirements from data storage folder name

* Fix error in nav

* Combine pre-install checklist with overview page

* Remove extra layer of User Management

* Add redirects

* Fix top of sample request page

* Add data storage rquirements redirects

* add network requirements redirect

* Begin breaking up pre-install checklist

* Fix docker link

* Fix data storage requirements

* More updates

* fix typos

* Update content/enterprise/install/pre-install-checklist.mdx

Co-authored-by: Brandon Ferguson <bnferguson@hashicorp.com>

* Update content/enterprise/requirements/data-storage/operational-mode-requirements.mdx

Co-authored-by: Laura Pacilio <83350965+laurapacilio@users.noreply.github.com>

* Update content/enterprise/requirements/credentials.mdx

Co-authored-by: Matthew Sanabria <24284972+sudomateo@users.noreply.github.com>

* Update data/enterprise-nav-data.json

Co-authored-by: Matthew Sanabria <24284972+sudomateo@users.noreply.github.com>

* Remove unnecesary pre-install info about logging

* Remove minio and vault optional content from operational mode requirements page

* Update content/enterprise/requirements/hardware.mdx

Co-authored-by: Judith Malnick <judith.patudith@gmail.com>

* updating the default data version so previews will work

* final nits :-)

* Update redirects.next.js

Co-authored-by: Kevin Wang <kwangsan@gmail.com>

* Update redirects.next.js

Co-authored-by: Kevin Wang <kwangsan@gmail.com>

* Update redirects.next.js

Co-authored-by: Kevin Wang <kwangsan@gmail.com>

* Update redirects.next.js

Co-authored-by: Kevin Wang <kwangsan@gmail.com>

* Update content/enterprise/requirements/os-specific/rhel-requirements.mdx

* Fix a few broken links

Co-authored-by: Brandon Ferguson <bnferguson@hashicorp.com>
Co-authored-by: Matthew Sanabri

--- a/content/enterprise/requirements/network.mdx
+++ b/content/enterprise/requirements/network.mdx
@@ -1,10 +1,12 @@
 ---
 page_title: Network Requirements - Before Installing - Terraform Enterprise
+description: >-
+  The Linux instance that runs Terraform Enterprise must allow several kinds of incoming network access.
 ---
 
 # Network Requirements for Terraform Enterprise
 
-The Linux instance that runs Terraform Enterprise needs to allow several kinds of incoming network access. Terraform Enterprise also needs to access several external services to handle updates and resource downloads.
+The Linux instance that runs Terraform Enterprise must allow several kinds of incoming network access. Terraform Enterprise also needs to access several external services to handle updates and resource downloads.
 
 ## Ingress
 
