--- a/content/enterprise/saml/idp-configuration/index.mdx
+++ b/content/enterprise/saml/idp-configuration/index.mdx
@@ -1,24 +1,21 @@
 ---
-page_title: SAML Identity Provider Configuration - Terraform Enterprise
+page_title: SAML Identity Provider Sample Authentication Request - Terraform Enterprise
 description: >-
-  Find instructions to set up SAML for specific identity providers and a sample
-  sign-on request and response.
+  Set up SAML for specific identity providers and review a sample sign-on request and response.
 ---
 
-# Identity Provider Configuration
+# Sample Authentication Request
 
-Single sign-on setup instructions for specific identity providers (IdP).
+We provide single sign-on setup instructions for specific identity providers (IdP):
 
-## Identity Providers
-
-* [ADFS](/enterprise/user-management/saml/idp-configuration/adfs)
-* [Azure Active Directory](/enterprise/user-management/saml/idp-configuration/aad)
-* [Okta](/enterprise/user-management/saml/idp-configuration/okta)
-* [OneLogin](/enterprise/user-management/saml/idp-configuration/onelogin)
+- [ADFS](/enterprise/user-management/saml/idp-configuration/adfs)
+- [Azure Active Directory](/enterprise/user-management/saml/idp-configuration/aad)
+- [Okta](/enterprise/user-management/saml/idp-configuration/okta)
+- [OneLogin](/enterprise/user-management/saml/idp-configuration/onelogin)
 
 ## Request and response
 
-To help you with the configuration of your identity provider, here are example documents for the request from Terraform Enterprise before sign-on and the response from the identity provider after sign-on.
+The following shows an example request from Terraform Enterprise before sign-on and the response from the identity provider after sign-on.
 
 ### Example AuthnRequest
 
