--- a/content/enterprise/requirements/os-specific/rhel-requirements.mdx
+++ b/content/enterprise/requirements/os-specific/rhel-requirements.mdx
@@ -16,7 +16,7 @@ When installing Terraform Enterprise on RedHat Enterprise Linux (RHEL), ensure y
 
 ### When I run the installer, it allows me to download and install Docker CE on RedHat. Can I use that?
 
-Yes, this is the recommended option. Docker CE is compatible with Terraform Enterprise, and tested every night. It is not directly [supported by RedHat](https://access.redhat.com/articles/2726611). This a robust open source community, however.
+Yes, this is the recommended option. Docker CE is compatible with Terraform Enterprise, and tested nightly. It is not directly [supported by RedHat](https://access.redhat.com/articles/2726611), but there is a robust (open source community)[https://www.docker.com/support/].
 
 ### Can I use the Docker version in the RHEL Extras Repository?
 
@@ -30,7 +30,7 @@ Red Hat Enterprise Linux v8 does not offer docker in the EPEL repository, please
 
 ### Docker was accidentally upgraded, how can I downgrade?
 
-The `yum downgrade` command can be used to downgrade the version of Docker that is installed.
+The `yum downgrade` command can be used to downgrade the version of Docker that is installed, if it was installed from the EPEL repository.
 
 For example, to downgrade from `docker-1.13.1-84.git07f3374.el7.x86_64` to `docker-1.13.1-72.git6f36bd4el8.x86_64` stop the Docker service and execute the following.
 
