--- a/content/enterprise/requirements/os-specific/rhel-requirements.mdx
+++ b/content/enterprise/requirements/os-specific/rhel-requirements.mdx
@@ -30,7 +30,7 @@ Red Hat Enterprise Linux v8 does not offer docker in the EPEL repository, please
 
 ### Docker was accidentally upgraded, how can I downgrade?
 
-The `yum downgrade` command can be used to downgrade the version of Docker that is installed, if it was installed from the EPEL repository.
+You can use the `yum downgrade` command to downgrade the version of Docker that is installed, if it was installed from the EPEL repository.
 
 For example, to downgrade from `docker-1.13.1-84.git07f3374.el7.x86_64` to `docker-1.13.1-72.git6f36bd4el8.x86_64` stop the Docker service and execute the following.
 
