--- a/content/enterprise/requirements/os-specific/rhel-requirements.mdx
+++ b/content/enterprise/requirements/os-specific/rhel-requirements.mdx
@@ -16,7 +16,7 @@ When installing Terraform Enterprise on RedHat Enterprise Linux (RHEL), ensure y
 
 ### When I run the installer, it allows me to download and install Docker CE on RedHat. Can I use that?
 
-Yes, this is the recommended option. Docker CE is compatible with Terraform Enterprise, and tested nightly. It is not directly [supported by RedHat](https://access.redhat.com/articles/2726611), but there is a robust [open source community](https://www.docker.com/support/).
+Yes, this is the recommended option. Docker CE is compatible with Terraform Enterprise, and tested nightly. It is not directly supported by RedHat, but there is a robust [open source community](https://www.docker.com/support/).
 
 ### Can I use the Docker version in the RHEL Extras Repository?
 
