update release notes to call out api changes

--- a/content/enterprise/releases/2022/v202205-1.mdx
+++ b/content/enterprise/releases/2022/v202205-1.mdx
@@ -11,6 +11,8 @@ page_title: Releases - Terraform Enterprise
 ## APPLICATION LEVEL FEATURES:
 
 1. Add option to de-register [inactive Agents](https://www.terraform.io/cloud-docs/agents#agent-capacity-usage) through the **Organization Settings > Agents** UI.
+2. Updated [Organization Memberships api](/cloud-docs/api-docs/organization-memberships#query-parameters) to add new `filter[email]` query parameter.
+3. Updated [Teams api](/cloud-docs/api-docs/teams#query-parameters) to add new `filter[names]` query parameter.
 
 ## APPLICATION LEVEL BUG FIXES:
 
