--- a/content/enterprise/releases/2022/v202205-1.mdx
+++ b/content/enterprise/releases/2022/v202205-1.mdx
@@ -4,6 +4,10 @@ page_title: Releases - Terraform Enterprise
 
 # TFE Release v202205-1 (619)
 
+## KNOWN ISSUES:
+
+1. External Vault users using the default Vault namespace will see the error `/usr/bin/vault-external-configure: line 37: VAULT_NAMESPACE: unbound variable` in the `tfe-vault` logs when attempting to start Terraform Enterprise. This error prevents Terraform Enterprise from starting. To resolve this, run `tfe-admin app-config -k extern_vault_namespace -v 'root'` and restart Terraform Enterprise. This does not affect External Vault users that use a custom Vault namespace.
+
 ## APPLICATION LEVEL BREAKING CHANGES:
 
 1. All container names now follow the same naming convention: `tfe-<service>`. If you have tooling that identifies containers by name, make sure this tooling is updated to reflect the new naming convention.
