added Run Task feature to the 06-1 release notes

--- a/content/enterprise/releases/2022/v202206-1.mdx
+++ b/content/enterprise/releases/2022/v202206-1.mdx
@@ -6,6 +6,7 @@ page_title: Releases - Terraform Enterprise
 
 ## APPLICATION LEVEL FEATURES:
 
+1. Added [Run Task](https://www.terraform.io/cloud-docs/workspaces/settings/run-tasks) functionality to Terraform Enterprise.
 1. Added several new run options to simplify Terraform upgrades: [perform plan-only runs with an alternate Terraform version](https://www.terraform.io/cloud-docs/run/ui#testing-terraform-upgrades-with-speculative-plans), re-try completed speculative plans with an alternate Terraform version, and use [empty apply runs](https://www.terraform.io/cloud-docs/run/modes-and-options#allow-empty-apply) to upgrade your state without requiring config changes. 
 1. Added functionality to the [backup and restore API](https://www.terraform.io/enterprise/admin/infrastructure/backup-restore) that lets Terraform Enterprise skip backing up the object storage data. 
 1. Added a warning in **Workspace > Settings > General** when you select a new Terraform version that is not recommended. 
