--- a/content/enterprise/requirements/data-storage/operational-mode-requirements.mdx
+++ b/content/enterprise/requirements/data-storage/operational-mode-requirements.mdx
@@ -6,7 +6,11 @@ description: >-
 
 # Operational Mode Data Storage Requirements
 
-Terraform Enterprise data storage requirements differ based on the operational mode you choose for your instance. If you are following one of the [reference architectures](/enterprise/before-installing/reference-architecture), we recommend referring to it while preparing your data storage services.
+Terraform Enterprise data storage requirements differ based on the
+[operational mode](/enterprise/operational-modes)
+you choose for your instance. If you are following one of the
+[reference architectures](/enterprise/before-installing/reference-architecture)
+, we recommend referring to it while preparing your data storage services.
 
 ## External Services Mode
 
