--- a/content/enterprise/operational-modes/index.mdx
+++ b/content/enterprise/operational-modes/index.mdx
@@ -29,11 +29,11 @@ Terraform Enterprise uses the following types of data.
 The following table summarizes where each Terraform Enterprise operational mode
 stores each type of application data.
 
-| Operational Mode                        | PostgreSQL Database                                                  | Object Storage                                                      | Vault                                                                                           | Redis                                  | Configuration                  |
-| --------------------------------------- | -------------------------------------------------------------------- | ------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------- | -------------------------------------- |------------------------------- |
-| [External Services](#external-services) | External, user-managed PostgreSQL database.                          | External, user-managed object storage location.                     | PostgreSQL Database unless using [External Vault](/enterprise/requirements/data-storage/vault). | Docker volume on the instance.         | Docker volume on the instance. |
-| [Active/Active](#active-active)         | External, user-managed PostgreSQL database.                          | External, user-managed object storage location.                     | PostgreSQL Database unless using [External Vault](/enterprise/requirements/data-storage/vault). | External, user-managed Redis instance. | Docker volume on the instance. |
-| [Mounted Disk](#mounted-disk)           | Directory on the instance backed by user-managed persistent storage. | Directory on the instance backed by user-managed persisent storage. | PostgreSQL Database unless using [External Vault](/enterprise/requirements/data-storage/vault). | Docker volume on the instance.         | Docker volume on the instance. |
+| Operational Mode                        | PostgreSQL Database                                                 | Object Storage                                                     | Vault                                                                                          | Redis                                 | Configuration                 |
+| --------------------------------------- | ------------------------------------------------------------------- | ------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------- | ------------------------------------- |------------------------------ |
+| [External Services](#external-services) | External, user-managed PostgreSQL database                          | External, user-managed object storage location                     | PostgreSQL Database unless using [External Vault](/enterprise/requirements/data-storage/vault) | Docker volume on the instance         | Docker volume on the instance |
+| [Active/Active](#active-active)         | External, user-managed PostgreSQL database                          | External, user-managed object storage location                     | PostgreSQL Database unless using [External Vault](/enterprise/requirements/data-storage/vault) | External, user-managed Redis instance | Docker volume on the instance |
+| [Mounted Disk](#mounted-disk)           | Directory on the instance backed by user-managed persistent storage | Directory on the instance backed by user-managed persisent storage | PostgreSQL Database unless using [External Vault](/enterprise/requirements/data-storage/vault) | Docker volume on the instance         | Docker volume on the instance |
 
 ## External Services
 
@@ -45,63 +45,63 @@ or Object Storage independently of the Terraform Enterprise instance.
 You are responsible for providing and maintaining the external PostgreSQL
 server and S3-compatible object storage.
 
-Configuration data is stored on a Docker volume on the instance. You can
-retrieve this information using `replicatedctl app-config export`.
+External Services stores configuration data on a Docker volume on the instance.
+Use `replicatedctl app-config export` to retrieve the configuration data.
 
 ### When to Use External Services
 
-External Services is recommended when:
+We recommend using External Services in the following use cases:
 
-- Running Terraform Enterprise in environment that has an external PostgreSQL server and S3-compatible object storage.
+- Your environment has an external PostgreSQL server and S3-compatible object storage.
 - You have experience managing a PostgreSQL server such as Amazon RDS for PostgreSQL, Google Cloud SQL for PostgreSQL, Azure Database for PostgreSQL, etc.
 - You have experience managing an S3-compatible object storage location such as AWS S3, Azure Blob Storage, Google Cloud Storage, MinIO, etc.
-- Want to use native backup and restore features provided by the external PostgreSQL server and S3-compatible object storage.
+- You want to use native backup and restore features provided by the external PostgreSQL server and S3-compatible object storage.
 
 ## Active/Active
 
 The Active/Active operational mode stores the PostgreSQL Database and Object
 Storage data on an external PostgreSQL server and S3-compatible object storage.
 This allows you to backup, restore, and scale the PostgreSQL Database or Object
-Storage independently of the Terraform Enterprise instance. Additionally, Redis
-data is stored in an external Redis instance, allowing for multiple instances
-of Terraform Enterprise to be used in an
+Storage independently of the Terraform Enterprise instance. Additionally,
+Active/Active stores Redis data in an external Redis instance, allowing you
+to use multiple instances of Terraform Enterprise in an
 [Active/Active](/enterprise/install/automated/active-active)
 architecture.
 
 You are responsible for providing and maintaining the external PostgreSQL
 server, S3-compatible object storage, and Redis instance.
 
-Configuration data is stored on a Docker volume on the instance. You can
-retrieve this information using `replicatedctl app-config export`.
+Active/Active stores configuration data on a Docker volume on the instance. Use
+`replicatedctl app-config export` to retrieve the configuration data.
 
 ### When to Use Active/Active
 
-Active/Active is recommended when:
+We recommend Active/Active for the following use cases:
 
-- Running Terraform Enterprise in environment that has an external PostgreSQL server, S3-compatible object storage, and Redis instance.
+- Your environment has an external PostgreSQL server, S3-compatible object storage, and Redis instance.
 - You have experience managing a PostgreSQL server such as Amazon RDS for PostgreSQL, Google Cloud SQL for PostgreSQL, Azure Database for PostgreSQL, etc.
 - You have experience managing an S3-compatible object storage location such as AWS S3, Azure Blob Storage, Google Cloud Storage, MinIO, etc.
 - You have experience managing a Redis instance such as AWS ElastiCache for Redis, Azure Cache for Redis, Google Cloud Memorystore for Redis, etc.
-- Want to use native backup and restore features provided by the external PostgreSQL server and S3-compatible object storage.
-- Want to scale beyond a single instance of Terraform Enterprise to increase reliability and performance.
+- You want to use native backup and restore features provided by the external PostgreSQL server and S3-compatible object storage.
+- You want to scale beyond a single instance of Terraform Enterprise to increase reliability and performance.
 
 ## Mounted Disk
 
 The Mounted Disk operational mode stores the PostgreSQL Database and Object
 Storage data in a directory on the instance. It is expected that this directory
-is backed by persistent storage that can be mounted to the instance. This
-allows you to backup and restore the PostgreSQL Database or Object Storage data
+is backed by persistent storage that you can mount to the instance. This allows
+you to backup and restore the PostgreSQL Database or Object Storage data
 independently of the Terraform Enterprise instance.
 
 You are responsible for providing and maintaining the persistent storage.
 
-Configuration data is stored on a Docker volume on the instance. You can
-retrieve this information using `replicatedctl app-config export`.
+Mounted Disk stores configuration data on a Docker volume on the instance. Use
+`replicatedctl app-config export` to retrieve the configuration data.
 
 ### When to Use Mounted Disk
 
-Mounted Disk is recommended when:
+We recommend Mounted Disk for the following use cases:
 
-- Running Terraform Enterprise in an environment that does not have an external PostgreSQL server or S3-compatible object storage.
+- Your environment does not have an external PostgreSQL server or S3-compatible object storage.
 - You have experience managing persistent storage such as an AWS EBS volume, an Azure Managed Disk, a Google Cloud Persistent Disk, an iSCSI location, etc.
-- Are familiar with using tools like `cp`, `scp`, and `rsync` to backup and restore data.
+- You are familiar with using tools like `cp`, `scp`, and `rsync` to backup and restore data.
