mention new workspace limit feature

--- a/content/enterprise/admin/application/resources.mdx
+++ b/content/enterprise/admin/application/resources.mdx
@@ -60,7 +60,7 @@ Be sure that the user's identity and the validity of their request have been ver
 
 ## Managing Organizations
 
-If your institution uses multiple organizations in Terraform Enterprise, you can view the details of each organization by clicking it in the admin list of organizations. From the details page, you can impersonate an owner or delete an organization (using the red **Delete this organization** button at the bottom of the details page).
+If your institution uses multiple organizations in Terraform Enterprise, you can view the details of each organization by clicking it in the admin list of organizations. From the details page, you can impersonate an owner or disable/delete an organization. You can also use this page to set the timeouts for plans and applies, set a limit on the maximum number of workspaces that the organization could contain, and control whether the organization can use beta versions of Terraform in its runs.
 
 Typically, all organizations on a Terraform Enterprise instance are granted "Premium" plan status to ensure access to all available features. However, it's also possible to set other statuses. An organization whose trial period is expired will be unable to make use of features in the Terraform Cloud application.
 
