--- a/content/enterprise/admin/application/resources.mdx
+++ b/content/enterprise/admin/application/resources.mdx
@@ -60,7 +60,9 @@ Be sure that the user's identity and the validity of their request have been ver
 
 ## Managing Organizations
 
-If your institution uses multiple organizations in Terraform Enterprise, you can view the details of each organization by clicking it in the admin list of organizations. From the details page, you can impersonate an owner or disable/delete an organization. You can also use this page to set the timeouts for plans and applies, set a limit on the maximum number of workspaces that the organization could contain, and control whether the organization can use beta versions of Terraform in its runs.
+The **Organizations** page lets you configure the organizations in your Terraform Enterprise instance. If there are multiple organizations, click each one in the admin list to view its details. 
+
+You can disable or delete organizations, as well as impersonate an owner to modify an organization's settings, profile, and workspaces. You can also control whether the organization can use beta Terraform versions in runs, set timeouts for plans and applies, and set a limit on the number of workspaces that an organization can contain.
 
 Typically, all organizations on a Terraform Enterprise instance are granted "Premium" plan status to ensure access to all available features. However, it's also possible to set other statuses. An organization whose trial period is expired will be unable to make use of features in the Terraform Cloud application.
 
